fix: fix theme style bundle

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>skin-switch</title>
+    <!-- inject:css -->
+    <!-- endinject -->
 </head>
+
 <body>
     <div class="app">
         <div class="view1"></div>
         <div class="view2"></div>
     </div>
+    <!-- inject:js -->
+    <!-- endinject -->
 </body>
+
 </html>
